--- a/final/styles/styles.css
+++ b/final/styles/styles.css
@@ -354,3 +354,7 @@ footer {
   white-space: nowrap;
   border: 0;
 }
+.card-content a:hover {
+  text-decoration: underline;
+  color: #2E8B57; /* 或你喜欢的绿色 */
+}
